--- a/software.html
+++ b/software.html
@@ -39,12 +39,18 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/wp-engine/job/o8Glbfw4'>WP Engine Careers - Senior Software Engineer</a></h5> 
+<h5><a href='https://www.militaryhire.com/jobs-for-veterans/job/2053867/Software-Engineer-Supporting-the-Navy-Warfighter/state/Maryland/city/Patuxent-River-Md/'>
+        Software Engineer Supporting the Navy Warfighter in Patuxent River, Md, Maryland Jobs for Veterans | Military Hire
+      </a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/wp-engine/job/o8Glbfw4'>WP Engine Careers - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/wp-engine/job/oRGlbfwN'>WP Engine Careers - Principal Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999698572103-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
@@ -75,7 +81,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zattoo.join.com/jobs/471774-software-engineer-golang'>Job @ Zattoo (Berlin): Software Engineer (Golang) | JOIN</a></h5> 
+<h5><a href='https://zattoo.join.com/jobs/471774-software-engineer-golang'>Job @ Zattoo (Berlin): Software Engineer (Golang) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -95,11 +101,11 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://trinetxinc.applytojob.com/apply/ANMIr0gv05/Senior-Software-Engineer-Data-Engineering'>Senior Software Engineer (Data Engineering) - TriNetX Inc - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://trinetxinc.applytojob.com/apply/ANMIr0gv05/Senior-Software-Engineer-Data-Engineering'>Senior Software Engineer (Data Engineering) - TriNetX Inc - Career Page</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA     Cambridge</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://trinetxinc.applytojob.com/apply/Qgx5YpSYUr/Software-Engineer-Science-And-Engineering'>Software Engineer (Science and Engineering) - TriNetX Inc - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://trinetxinc.applytojob.com/apply/Qgx5YpSYUr/Software-Engineer-Science-And-Engineering'>Software Engineer (Science and Engineering) - TriNetX Inc - Career Page</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA     Cambridge</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -131,7 +137,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692883-sr-software-engineer-for-global-sportswear-brand-no-c2c-only-w2-'>Aroghia Group Sr. Software Engineer for Global Sportswear Brand, no C2C & only W2. | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692883-sr-software-engineer-for-global-sportswear-brand-no-c2c-only-w2-'>Aroghia Group Sr. Software Engineer for Global Sportswear Brand, no C2C & only W2. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -143,7 +149,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999698692085-senior-software-engineer-integrations-seattle-wa'>Guardant Health Senior Software Engineer, Integrations - Seattle, WA | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999698692085-senior-software-engineer-integrations-seattle-wa'>Guardant Health Senior Software Engineer, Integrations - Seattle, WA | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA Seattle, WA  Seattle, WA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -191,7 +197,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ogiebfwH&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n4y2qMwl'>ServiceNow Careers - Staff Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ogiebfwH&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n4y2qMwl'>ServiceNow Careers - Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -199,7 +205,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/granular/jobs/1938339'>Job Application for Senior Software Engineer, Cloud - Infrastructure at Granular</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/granular/jobs/1938339'>Job Application for Senior Software Engineer, Cloud - Infrastructure at Granular</a></h5> 
 <p><span class="badge badge-light">United States Johnston, Iowa United States San Francisco, CAUnited States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -259,7 +265,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698683686-lead-software-engineer-jr1007279-'>Broadridge Lead Software Engineer (JR1007279) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698683686-lead-software-engineer-jr1007279-'>Broadridge Lead Software Engineer (JR1007279) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kansas City, MO</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -267,7 +273,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698685989-lead-senior-software-engineer-data-engineering'>PayScale Lead, Senior Software Engineer, Data Engineering | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698685989-lead-senior-software-engineer-data-engineering'>PayScale Lead, Senior Software Engineer, Data Engineering | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -279,11 +285,11 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://genesys.referrals.selectminds.com/jobs/associate-software-engineer-.net-developer-4023'>Associate Software Engineer - .Net developer - Genesys Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/associate-software-engineer-.net-developer-4023'>Associate Software Engineer - .Net developer - Genesys Careers</a></h5> 
 <p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -291,7 +297,7 @@
 <p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://apply.workable.com/collectai/j/11C51D6758/'>Software Engineer Frontend (f/m/d) - collect Artificial Intelligence GmbH</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/collectai/j/11C51D6758/'>Software Engineer Frontend (f/m/d) - collect Artificial Intelligence GmbH</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -303,7 +309,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.commercialappeal.com/Job?data=XI1fsyQrh9u0esy/ajZmgWS/rTpmjyWuwnRLRcInuzCmMG%2BwyZTIQA%3D%3D'>Senior Software Developer job in Collierville, TN (38017) - The Commercial Appeal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.commercialappeal.com/Job?data=XI1fsyQrh9u0esy/ajZmgWS/rTpmjyWuwnRLRcInuzCmMG%2BwyZTIQA%3D%3D'>Senior Software Developer job in Collierville, TN (38017) - The Commercial Appeal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -351,7 +357,7 @@
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qNc9VfwN&k=Job&j=oxUrbfwN&__jvst=Employee+Referral&__jvsd=sQfHFgwc&__jvsc=Twitter&bid=nQJGqMwW'>Workiva Inc. Careers - Senior Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qNc9VfwN&k=Job&j=oxUrbfwN&__jvst=Employee+Referral&__jvsd=sQfHFgwc&__jvsc=Twitter&bid=nQJGqMwW'>Workiva Inc. Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -371,7 +377,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/allegrodev/job/o45rbfwv'>Allegro Development Corporation Careers - Senior Software Engineer II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/allegrodev/job/o45rbfwv'>Allegro Development Corporation Careers - Senior Software Engineer II</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas  Dallas, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -387,7 +393,7 @@
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dynatrace/29cf95bd-6db8-42d8-ad78-e50030279972'>Dynatrace - Localization Software Engineer - (English to Chinese) - new</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dynatrace/29cf95bd-6db8-42d8-ad78-e50030279972'>Dynatrace - Localization Software Engineer - (English to Chinese) - new</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -407,7 +413,7 @@
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hearst.referrals.selectminds.com/jobs/manager-software-engineering-7418'>Manager, Software Engineering - Hearst Careers</a></h5> 
+<h5><a href='https://hearst.referrals.selectminds.com/jobs/manager-software-engineering-7418'>Manager, Software Engineering - Hearst Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -436,10 +442,6 @@
 <h5><a href='https://boards.greenhouse.io/endurance/jobs/1922216'>Job Application for Sr. Software Engineer - SPAs with React at Endurance International Group</a></h5> 
 <p><span class="badge badge-light">Burlington, MA</span></p>
 <p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://l10n.org/job/robotics-localization-software-engineer/'>Robotics Localization Software Engineer ? Localization Jobs</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on:: 2019-11-01</p>
 <hr/>
 
 
